fix #8116 feat(nimbus): Add new field to check existing feature
