# app/experimenter/docs/openapi-schema.json
@@ -3304,6 +3304,9 @@
                 },
                 "setsPrefs": {
                   "type": "boolean"
+                },
+                "enabled": {
+                  "type": "boolean"
                 }
               },
               "required": [
@@ -3314,7 +3317,8 @@
                 "application",
                 "ownerEmail",
                 "schema",
-                "setsPrefs"
+                "setsPrefs",
+                "enabled"
               ]
             }
           },
